# progect

./: .gitignore  logger.py  main.py  monitor.db  pyproject.toml
api/: routes.py
database/: crud.py  db.py  init_db.py  models.py
services/: monitor.py
templates/: index.html
