[project]
name = "progect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.12",
    "gputil>=1.4.0",
    "jinja2>=3.1.6",
    "psutil>=7.0.0",
    "pydantic>=2.11.3",
    "services>=0.1.1",
    "setuptools>=78.1.0",
    "sqlalchemy[asyncio]>=2.0.40",
    "uvicorn[standard]>=0.34.1",
]
